@@ -1,101 +1,95 @@
 package br.com.fatec.catalogo.controllers;
 
-import br.com.fatec.catalogo.models.CategoriaModel;
 import br.com.fatec.catalogo.models.ProdutoModel;
-import br.com.fatec.catalogo.repositories.CategoriaRepository;
-import br.com.fatec.catalogo.repositories.ProdutoRepository;
+import br.com.fatec.catalogo.services.CategoriaService;
+import br.com.fatec.catalogo.services.ProdutoService;
+import jakarta.validation.Valid;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestParam;
-
-import java.util.List;
+import org.springframework.validation.BindingResult;
+import org.springframework.web.bind.annotation.*;
+import org.springframework.web.servlet.mvc.support.RedirectAttributes;
+import java.time.LocalTime;
+import java.time.format.DateTimeFormatter;
 
 @Controller
+@RequestMapping("/produtos")
 public class ProdutoController {
 
     @Autowired
-    private ProdutoRepository repository;
+    private ProdutoService service;
 
     @Autowired
-    private CategoriaRepository categoriaRepository;
+    private CategoriaService categoriaService;
 
-    // 1. LISTAGEM COM FILTROS (NOME E CATEGORIA)
-    @GetMapping("/produtos")
-    public String listaProdutos(
-            @RequestParam(value = "nome", required = false) String nome,
-            @RequestParam(value = "categoriaId", required = false) Long categoriaId,
-            Model model) {
+    @GetMapping
+    public String listar(@RequestParam(value = "nome", required = false) String nome,
+                         @RequestParam(value = "categoriaId", required = false) Long categoriaId,
+                         Model model) {
 
-        List<ProdutoModel> lista;
-
-        // Lógica de Filtros Combinados
-        if (nome != null && !nome.trim().isEmpty() && categoriaId != null) {
-            // Busca por Nome E Categoria
-            lista = repository.findByNomeContainingIgnoreCaseAndCategoriaIdCategoria(nome, categoriaId);
-        } else if (nome != null && !nome.trim().isEmpty()) {
-            // Busca apenas por Nome
-            lista = repository.findByNomeContainingIgnoreCase(nome);
+        // 1. Lógica de Filtragem (Produtos vindo da Service)
+        if (nome != null && !nome.isBlank()) {
+            model.addAttribute("produtos", service.listarPorNome(nome));
         } else if (categoriaId != null) {
-            // Busca apenas por Categoria
-            lista = repository.findByCategoriaIdCategoria(categoriaId);
+            model.addAttribute("produtos", service.listarPorCategoria(categoriaId));
         } else {
-            // Sem filtros, traz tudo
-            lista = repository.findAll();
+            model.addAttribute("produtos", service.listarTodos());
         }
 
-        // Adiciona dados ao Model para renderizar na página
-        model.addAttribute("produtos", lista);
-        model.addAttribute("categorias", categoriaRepository.findAll()); // Para preencher o select de filtro
-        model.addAttribute("categoriaSelecionada", categoriaId); // Para manter a seleção no select após a busca
+        // 2. Carrega as categorias para o <select> do filtro vindo da Service
+        model.addAttribute("categorias", categoriaService.listarTodas());
 
         return "lista-produtos";
     }
 
-    // 2. EXIBIR FORMULÁRIO DE CADASTRO
-    @GetMapping("/produtos/novo")
+    @GetMapping("/novo")
     public String exibirFormulario(Model model) {
         model.addAttribute("produto", new ProdutoModel());
-        model.addAttribute("categorias", categoriaRepository.findAll());
+        model.addAttribute("categorias", categoriaService.listarTodas());
         return "cadastro-produto";
     }
 
-    // 3. SALVAR PRODUTO
-    @PostMapping("/produtos/novo")
-    public String salvarProduto(ProdutoModel produto, Model model) {
+    @PostMapping("/salvar")
+    public String salvar(@Valid @ModelAttribute("produto") ProdutoModel produto,
+                         BindingResult result,
+                         RedirectAttributes redirectAttributes,
+                         Model model) {
+
+        // Se houver erros de validação estrutural (anotações do Jakarta Validation)
+        if (result.hasErrors()) {
+            model.addAttribute("categorias", categoriaService.listarTodas());
+            return "cadastro-produto";
+        }
+
         try {
-            // Trata ID zero como nulo para criação de novo registro
-            if (produto.getIdProduto() != null && produto.getIdProduto() == 0) {
-                produto.setIdProduto(null);
-            }
-            repository.save(produto);
+            // Executa o salvamento passando pela validação de negócio da Service (Quantidade negativa)
+            service.salvar(produto);
+
+            // Tópico 3:UX - Captura o horário exato da modificação
+            String horario = LocalTime.now().format(DateTimeFormatter.ofPattern("HH:mm:ss"));
+            redirectAttributes.addFlashAttribute("sucesso", "Operação realizada com sucesso às " + horario + "!");
+
             return "redirect:/produtos";
-        } catch (Exception e) {
-            e.printStackTrace();
-            model.addAttribute("produto", produto);
-            model.addAttribute("categorias", categoriaRepository.findAll());
+
+        } catch (IllegalArgumentException e) {
+            // Captura o erro de estoque negativo jogado pela Service e devolve para a tela
+            model.addAttribute("erro", e.getMessage());
+            model.addAttribute("categorias", categoriaService.listarTodas());
             return "cadastro-produto";
         }
     }
 
-    // 4. EXIBIR FORMULÁRIO DE EDIÇÃO
-    @GetMapping("/produtos/editar/{id}")
-    public String exibirFormularioEdicao(@PathVariable("id") long id, Model model) {
-        ProdutoModel produto = repository.findById(id)
-                .orElseThrow(() -> new IllegalArgumentException("Produto inválido:" + id));
-
-        model.addAttribute("produto", produto);
-        model.addAttribute("categorias", categoriaRepository.findAll());
+    @GetMapping("/editar/{id}")
+    public String editar(@PathVariable long id, Model model) {
+        model.addAttribute("produto", service.buscarPorId(id));
+        model.addAttribute("categorias", categoriaService.listarTodas());
         return "cadastro-produto";
     }
 
-    // 5. DELETAR PRODUTO
-    @GetMapping("/produtos/deletar/{id}")
-    public String deletarProduto(@PathVariable("id") long id) {
-        repository.deleteById(id);
+    @GetMapping("/excluir/{id}")
+    public String excluir(@PathVariable long id) {
+        service.excluir(id);
         return "redirect:/produtos";
     }
 }
